syntax = "proto3";
import "span/span.proto";

option java_package = "com.expedia.open.tracing.buffer";
option java_multiple_files = true;

message SpanBuffer {
    string traceId = 1;
    repeated Span childSpans = 2;
}